# tononkira

./: Cargo.toml  README.md
.github/workflows/: release-for-arm.yml  release-for-mac.yml  release.yml  rust-clippy.yml
src/: colorizer.rs  constants.rs  lib.rs  main.rs  parser.rs  types.rs
