[package]
name = "tononkira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
scraper = "0.13.0"
serde = "1.0.143"
serde_json = "1.0.83"
surf = "2.3.2"
tokio = { version = "1.20.1", features = ["full"] }
